create layout for all page
